clusters/pi-cluster/infrastructure/headlamp.yaml
# clusters/pi-cluster/infrastructure/headlamp.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: headlamp
  labels:
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
      - headlamp
  rules:
    - host: headlamp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
